--- a/proxy-mantab.cabal
+++ b/proxy-mantab.cabal
@@ -5,10 +5,10 @@ version:             0.1.0.0
 homepage:            https://github.com/githubuser/proxy-mantab#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2017 Author name here
-category:            Web
+author:              Moch Deden
+maintainer:          moch.deden.r@gmail.com
+copyright:           2017 Moch Deden
+category:            Util
 build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md
